fixed detail issue on mobile, staticmap hack

--- a/static/global.css
+++ b/static/global.css
@@ -15,8 +15,12 @@
 	--border-radius: 6px;
 }
 
-* {
-	box-sizing: border-box;
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
@@ -25,6 +29,10 @@ body {
 	font-size: 14px;
 	line-height: 1.5;
 	color: var(--color-black);
+}
+
+#sapper {
+	min-height: 100vh;
 }
 
 
